<resources>
    <string name="app_name">GamerNet</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name_nickname">%s  \'%s\'</string>
    <string name="example_about_me_text">Lorem ipsum bla bla cos tam teges no w ogole fajnie i ten tegoLorem ipsum bla bla cos tam teges no w ogole fajnie Lorem ipsum bla bla cos tam teges no w ogole fajnie</string>
    <string name="user_age">%d Years Old</string>
    <string name="comments_number">Comments: %d</string>
    <string name="likes_number">%d Likes</string>
    <string name="hint_search">Search…</string>
    <string name="description_add_picture_from_gallery">add picture from gallery</string>
    <string name="hint_new_post_input">Share your thoughts…</string>
    <string name="label_publish_button">Publish</string>
    <string name="sorted_by_date">sorted by date</string>
    <string name="all_advertisements">All advertisements</string>
    <string name="description_clear_filters">Clear Filters</string>
    <string name="label_save">Save</string>
    <string name="label_cancel">Cancel</string>
    <string name="hint_date_of_birth_format">Date Of Birth (dd/mm/yyyy)</string>
    <string name="label_respond">respond</string>
    <string name="label_comments">Comments</string>
    <string name="hint_comment">Type your comment</string>
    <string name="label_show_more">Show more…</string>
    <string name="label_show_less">Show less…</string>
    <string name="players_number">%d Player</string>

    <string name="about_me">My names is Adam,\nI\'m originally from a New York where i grew up and gained great passion for computer games.\nI\'m a huge fun of Counter Strike 1.6 and Mortal Kombat.\nIf you want to play a matchmaking together feel free to invite me to friends and send a private message!</string>

    <string-array name="games">
        <item>Counter Strike: Global Offensive</item>
        <item>Counter Strike: 1.6</item>
        <item>Call Of Duty: Modern Warfare</item>
        <item>Mario Bros</item>
        <item>Pacman</item>
        <item>Grand Theft Auto: V</item>
        <item>Grand Theft Auto: Vice City</item>
        <item>Grand Theft Auto: San Andreas</item>
        <item>Need For Speed: Most Wanted</item>
    </string-array>


    <string-array name="languages">
        <item>Any Language</item>
        <item>English</item>
        <item>Russian</item>
        <item>Polish</item>
        <item>Spanish</item>
        <item>Italian</item>
        <item>Lithuanian</item>
        <item>Norwegian</item>
        <item>Danish</item>
        <item>French</item>
        <item>Mexican</item>
    </string-array>

    <string name="any_players_number">Any Players Number</string>
    <string name="placeholder_date_time_text">11/07/2019 21:37</string>
    <string name="placeholder_name_nickname">Nikolaj \'Netoperek\'</string>
    <string name="placeholder_likes">0 Likes</string>
    <string name="description_like_button">Like button</string>
    <string name="label_filter">Filters</string>
    <string name="icon_overflow">⋮</string>
    <string name="label_message">Message</string>
    <string name="hint_message">Type your message...</string>

    <string-array name="playersNumber">
        <item>@string/any_players_number</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>

    </string-array>


</resources>
